--- a/package.json
+++ b/package.json
@@ -128,10 +128,10 @@
   "devDependencies": {
     "@commitlint/cli": "6.1.3",
     "@commitlint/config-conventional": "6.1.3",
-    "@storybook/addon-actions": "3.4.3",
-    "@storybook/addon-links": "3.4.3",
-    "@storybook/addons": "3.4.3",
-    "@storybook/vue": "4.0.0-alpha.1",
+    "@storybook/addon-actions": "4.0.0-alpha.4",
+    "@storybook/addon-links": "4.0.0-alpha.4",
+    "@storybook/addons": "4.0.0-alpha.4",
+    "@storybook/vue": "4.0.0-alpha.4",
     "@types/animejs": "2.0.0",
     "@types/body-parser": "1.17.0",
     "@types/compression": "0.0.36",
@@ -178,6 +178,8 @@
     "nixt": "0.5.0",
     "node-sass": "4.9.0",
     "plop": "2.0.0",
+    "react": "16.3.2",
+    "react-dom": "16.3.2",
     "rimraf": "2.6.2",
     "sass-loader": "7.0.1",
     "serviceworker-webpack-plugin": "1.0.0-alpha02",
