--- a/package.json
+++ b/package.json
@@ -113,9 +113,10 @@
     "express": "4.16.3",
     "js-cookie": "2.2.0",
     "lodash": "4.17.10",
-    "lru-cache": "4.1.2",
+    "lru-cache": "4.1.3",
     "marked": "0.3.19",
     "serve-favicon": "2.5.0",
+    "vee-validate": "2.0.9",
     "vue": "2.5.16",
     "vue-i18n": "7.6.0",
     "vue-meta": "1.5.0",
@@ -126,7 +127,7 @@
     "winston": "2.4.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "6.1.3",
+    "@commitlint/cli": "6.2.0",
     "@commitlint/config-conventional": "6.1.3",
     "@storybook/addon-actions": "4.0.0-alpha.4",
     "@storybook/addon-links": "4.0.0-alpha.4",
@@ -144,25 +145,25 @@
     "@types/js-cookie": "2.1.0",
     "@types/lodash": "4.14.108",
     "@types/marked": "0.3.0",
-    "@types/node": "10.0.0",
+    "@types/node": "10.0.4",
     "@types/serve-favicon": "2.2.30",
     "@types/storybook__addon-actions": "3.0.3",
     "@types/storybook__vue": "3.3.0",
-    "@types/webpack": "4.1.4",
+    "@types/webpack": "4.1.6",
     "@types/webpack-dev-middleware": "2.0.1",
     "@types/webpack-merge": "4.1.3",
     "@types/winston": "2.3.9",
-    "@vue/test-utils": "1.0.0-beta.15",
+    "@vue/test-utils": "1.0.0-beta.16",
     "autoprefixer": "8.4.1",
     "axios-mock-adapter": "1.15.0",
     "babel-core": "6.26.3",
-    "babel-preset-env": "1.6.1",
+    "babel-preset-env": "1.7.0",
     "babel-preset-vue": "2.0.2",
-    "codecov": "3.0.1",
+    "codecov": "3.0.2",
     "compression-webpack-plugin": "1.1.11",
     "concurrently": "3.5.1",
     "copy-webpack-plugin": "4.5.1",
-    "cross-env": "5.1.4",
+    "cross-env": "5.1.5",
     "css-loader": "0.28.11",
     "css-mqpacker": "6.0.2",
     "cssnano": "3.10.0",
@@ -175,7 +176,6 @@
     "identity-obj-proxy": "3.0.0",
     "jest": "22.4.3",
     "jest-vue-preprocessor": "1.4.0",
-    "nixt": "0.5.0",
     "node-sass": "4.9.0",
     "plop": "2.0.0",
     "react": "16.3.2",
@@ -183,17 +183,18 @@
     "rimraf": "2.6.2",
     "sass-loader": "7.0.1",
     "serviceworker-webpack-plugin": "1.0.0-alpha02",
-    "storybook-addon-vue-info": "0.2.0",
-    "ts-jest": "22.4.4",
-    "ts-loader": "4.2.0",
-    "tslint": "5.9.1",
+    "storybook-addon-vue-info": "0.4.1",
+    "ts-jest": "22.4.6",
+    "ts-loader": "4.3.0",
+    "tslint": "5.10.0",
     "typescript": "2.8.3",
     "vue-jest": "2.5.0",
     "vue-loader": "14.2.2",
     "vue-ssr-webpack-plugin": "3.0.0",
-    "webpack": "4.6.0",
-    "webpack-bundle-analyzer": "2.11.1",
-    "webpack-cli": "2.0.15",
+    "vue-template-compiler": "2.5.16",
+    "webpack": "4.8.2",
+    "webpack-bundle-analyzer": "2.11.2",
+    "webpack-cli": "2.1.3",
     "webpack-dev-middleware": "3.1.3",
     "webpack-hot-middleware": "2.22.1",
     "webpack-merge": "4.1.2"
