--- a/package.json
+++ b/package.json
@@ -178,6 +178,7 @@
     "jest-vue-preprocessor": "1.4.0",
     "node-sass": "4.9.0",
     "plop": "2.0.0",
+    "postcss-loader": "2.1.5",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "rimraf": "2.6.2",
@@ -189,7 +190,7 @@
     "tslint": "5.10.0",
     "typescript": "2.8.3",
     "vue-jest": "2.5.0",
-    "vue-loader": "14.2.2",
+    "vue-loader": "15.0.10",
     "vue-ssr-webpack-plugin": "3.0.0",
     "vue-template-compiler": "2.5.16",
     "webpack": "4.8.2",
