--- a/package.json
+++ b/package.json
@@ -1,180 +1,47 @@
 {
-  "name": "vuesion",
-  "version": "3.7.3",
-  "description": "The most complete boilerplate for production-ready PWAs. With focus on performance, development speed, and best practices",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/vuesion/vuesion.git"
-  },
-  "keywords": [
-    "vue",
-    "vuex",
-    "vue-router",
-    "webpack",
-    "typescript",
-    "server-side-rendering",
-    "boilerplate",
-    "jest",
-    "enterprise",
-    "components",
-    "design-system"
-  ],
-  "author": "Johannes Werner <johannes.werner86@gmail.com>",
-  "license": "MIT",
-  "homepage": "https://github.com/vuesion/vuesion",
-  "bugs": {
-    "url": "https://github.com/vuesion/vuesion/issues"
-  },
+  "name": "vuesion-nuxt",
+  "version": "1.0.0",
+  "description": "My splendiferous Nuxt.js project",
+  "author": "Thomas Misikoff",
+  "private": true,
   "scripts": {
-    "dev": "vuesion dev -o",
-    "generate": "vuesion generate",
-    "add": "vuesion add",
-    "extract-i18n-messages": "vuesion extract-i18n-messages",
-    "test": "vuesion test --coverage",
-    "e2e": "vuesion e2e",
-    "lint": "vuesion lint --cache",
-    "clean": "vuesion clean",
-    "storybook:dev": "vuesion storybook --dev",
-    "storybook:build": "vuesion storybook",
-    "update": "vuesion update",
-    "prettier": "vuesion prettier",
-    "release:major": "vuesion release --major",
-    "release:minor": "vuesion release --minor",
-    "release:patch": "vuesion release --patch",
-    "build": "vuesion build",
-    "build:analyze": "vuesion build --analyze",
-    "build:spa": "vuesion build --spa",
-    "start": "node ./dist/server/server.js",
-    "e2e:ci": "npx start-server-and-test dev http://localhost:3000 e2e",
-    "ci": "vuesion parallel \"npm run lint\" \"npm run test -- --runInBand\" \"npm run e2e:ci\" && npm run build:spa",
-    "postci": "vuesion parallel \"npm run build\" \"npm run storybook:build\""
+    "dev": "nuxt-ts",
+    "build": "nuxt-ts build",
+    "generate": "nuxt-ts generate",
+    "start": "nuxt-ts start",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "test": "jest"
   },
-  "dependencies": {
-    "@vue/composition-api": "0.5.0",
-    "@vuesion/models": "^4.0.0-alpha.11",
-    "@vuesion/utils": "^4.0.0-alpha.11",
-    "@vuesion/vuex-persist": "4.0.0-alpha.11",
-    "@vuesion/webpack": "^4.0.0-alpha.11",
-    "accept-language": "3.0.18",
-    "animejs": "3.1.0",
-    "axios": "^0.19.2",
-    "body-parser": "1.19.0",
-    "compression": "1.7.4",
-    "config": "3.3.1",
-    "cookie-parser": "1.4.5",
-    "deepmerge": "4.2.2",
-    "eslint-config-prettier": "6.10.1",
-    "express": "4.17.1",
-    "helmet": "3.22.0",
-    "jest": "25.2.4",
-    "lodash": "4.17.15",
-    "lru-cache": "5.1.1",
-    "marked": "0.8.2",
-    "prettier": "2.0.2",
-    "serve-favicon": "2.5.0",
-    "vee-validate": "2.0.9",
-    "vue": "^2.6.11",
-    "vue-i18n": "8.16.0",
-    "vue-meta": "2.3.3",
-    "vue-router": "^3.1.6",
-    "vue-server-renderer": "^2.6.11",
-    "vuex": "^3.1.3",
-    "vuex-router-sync": "^5.0.0",
-    "winston": "3.2.1"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "8.3.5",
-    "@commitlint/config-conventional": "8.3.4",
-    "@testing-library/jest-dom": "^5.3.0",
-    "@testing-library/vue": "^5.0.2",
-    "@types/animejs": "3.1.0",
-    "@types/body-parser": "1.19.0",
-    "@types/compression": "1.7.0",
-    "@types/cookie-parser": "1.4.2",
-    "@types/express": "4.17.3",
-    "@types/helmet": "0.0.45",
-    "@types/jest": "25.1.4",
-    "@types/lodash": "4.14.149",
-    "@types/marked": "0.7.3",
-    "@types/node": "12.12.21",
-    "@types/serve-favicon": "2.5.0",
-    "@vuesion/service": "^4.0.0-alpha.11",
-    "@vuesion/storybook-theme-switcher": "^4.0.0-alpha.11",
-    "axios-mock-adapter": "1.18.1",
-    "husky": "4.2.3",
-    "identity-obj-proxy": "3.0.0",
-    "node-sass": "4.13.1",
-    "ts-jest": "25.3.0",
-    "typescript": "3.8.3",
-    "vue-template-compiler": "^2.6.11"
-  },
-  "engines": {
-    "node": ">= 12.0.0",
-    "npm": ">= 6.0.0"
+  "lint-staged": {
+    "*.{js,vue}": "npm run lint"
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS",
-      "pre-commit": "vuesion parallel \"vuesion prettier --staged\" \"npm run lint\" \"npm run test\""
+      "pre-commit": "lint-staged"
     }
   },
-  "jest": {
-    "globals": {
-      "window": true,
-      "ts-jest": {
-        "tsConfig": "tsconfig.test.json"
-      }
-    },
-    "rootDir": ".",
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "setupFiles": [
-      "<rootDir>/jestsetup.ts"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/.vuesion/jest.config.ts"
-    ],
-    "moduleFileExtensions": [
-      "js",
-      "ts"
-    ],
-    "moduleNameMapper": {
-      "^@/(.*)$": "<rootDir>/src/$1",
-      "^@shared/(.*)$": "<rootDir>/src/app/shared/$1",
-      "^@components/(.*)$": "<rootDir>/src/app/shared/components/$1",
-      "^@static/(.*)$": "<rootDir>/src/static/$1"
-    },
-    "transform": {
-      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest",
-      ".(ts|tsx)": "ts-jest"
-    },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "coverageThreshold": {
-      "global": {
-        "branches": 95,
-        "functions": 95,
-        "lines": 95,
-        "statements": 95
-      }
-    },
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "<rootDir>/jestsetup.ts"
-    ],
-    "coverageDirectory": "./coverage",
-    "coverageReporters": [
-      "html",
-      "text",
-      "lcov",
-      "json"
-    ],
-    "preset": "ts-jest",
-    "testMatch": null
+  "dependencies": {
+    "nuxt": "^2.0.0",
+    "@nuxt/typescript-runtime": "^0.4.0",
+    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/pwa": "^3.0.0-0"
   },
-  "browserslist": [
-    "> 2%",
-    "last 2 versions",
-    "IE >= 11"
-  ]
+  "devDependencies": {
+    "@nuxt/typescript-build": "^0.6.0",
+    "@nuxtjs/eslint-config-typescript": "^1.0.0",
+    "@nuxtjs/eslint-module": "^1.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^6.1.0",
+    "eslint-plugin-nuxt": ">=0.4.2",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^1.19.1",
+    "husky": "^4.0.0",
+    "lint-staged": "^10.0.0",
+    "@vue/test-utils": "^1.0.0-beta.27",
+    "babel-jest": "^24.1.0",
+    "jest": "^24.1.0",
+    "vue-jest": "^4.0.0-0",
+    "ts-jest": "^25.0.0"
+  }
 }
