--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^3.0.0-0",
     "@types/animejs": "^3.1.1",
-    "@types/cookie-parser": "1.4.2",
-    "@types/helmet": "0.0.47",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/helmet": "^0.0.47",
     "animejs": "^3.2.0",
-    "compression": "1.7.4",
-    "cookie-parser": "1.4.5",
-    "helmet": "3.23.1",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
+    "helmet": "^3.23.1",
     "lodash": "^4.17.15",
     "marked": "^1.1.0",
     "nuxt": "^2.0.0",
@@ -41,8 +41,8 @@
     "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
+    "@commitlint/cli": "^9.0.1",
+    "@commitlint/config-conventional": "^9.0.1",
     "@nuxt/typescript-build": "^1.0.0",
     "@nuxtjs/eslint-config-typescript": "^2.0.0",
     "@nuxtjs/eslint-module": "^2.0.0",
@@ -50,7 +50,7 @@
     "@testing-library/vue": "^5.0.4",
     "@types/jest": "^26.0.0",
     "@types/lodash": "^4.14.155",
-    "@types/marked": "^0.7.4",
+    "@types/marked": "^1.1.0",
     "@types/testing-library__jest-dom": "^5.9.1",
     "@vue/composition-api": "^0.6.3",
     "@vue/test-utils": "^1.0.0-beta.27",
@@ -63,7 +63,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.2",
-    "flush-promises": "1.0.2",
+    "flush-promises": "^1.0.2",
     "husky": "^4.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.0.1",
