--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,7 @@
     "target": "es2018",
     "module": "esnext",
     "moduleResolution": "node",
-    "lib": [
-      "esnext",
-      "esnext.asynciterable",
-      "dom"
-    ],
+    "lib": ["esnext", "esnext.asynciterable", "dom"],
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -16,16 +12,16 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": [
-        "src/*"
-      ],
-      "@/*": [
-        "src/*"
-      ]
+      "~/*": ["src/*"],
+      "@/*": ["src/*"],
+      "@shared/*": ["src/components/*"],
+      "@components/*": ["src/components/*"],
+      "@static/*": ["src/static/*"]
     },
     "rootDirs": ["src"],
     "types": [
       "@nuxt/types",
+      "@nuxtjs/axios",
       "node",
       "animejs",
       "express",
@@ -37,10 +33,8 @@
     ]
   },
   "include": ["./src/**/*", "./src/**/*.vue"],
-  "exclude": [
-    "node_modules",
-    ".nuxt",
-    "dist"
-  ],
-  "files": ["src/vue-shim.d.ts", "src/custom-typings.d.ts", "src/plugins/vue.plugins.d.ts"]
+  "exclude": ["node_modules", ".nuxt", "dist"],
+  "files": ["src/vue-shim.d.ts", "src/custom-typings.d.ts",
+    "src/vue.plugins.d.ts"
+  ]
 }
