--- a/.vuesion/config.json
+++ b/.vuesion/config.json
@@ -5,7 +5,7 @@
     "outputDirectory": "./src",
     "stateFile": "./src/store/IState.ts"
   },
-  "clean": ["./.nuxt", "./coverage", "./storybook-static", "./nuxt.config.js"],
+  "clean": ["./dist", "./.nuxt", "./coverage", "./storybook-static", "./nuxt.config.js"],
   "prettier": {
     "extensions": "ts,vue,js,json,scss,sass,css,yaml,yml"
   }
