--- a/package.json
+++ b/package.json
@@ -63,63 +63,63 @@
     }
   },
   "dependencies": {
-    "@nuxt/typescript-runtime": "^0.4.0",
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/pwa": "^3.0.0-0",
-    "@types/animejs": "^3.1.1",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/helmet": "^0.0.47",
-    "@vue/composition-api": "^0.6.3",
-    "@vuesion/utils": "^4.0.0-alpha.12",
+    "@nuxt/typescript-runtime": "0.4.10",
+    "@nuxtjs/axios": "5.12.2",
+    "@nuxtjs/pwa": "3.0.2",
+    "@types/animejs": "3.1.2",
+    "@types/cookie-parser": "1.4.2",
+    "@types/helmet": "0.0.48",
+    "@vue/composition-api": "0.6.7",
+    "@vuesion/utils": "4.0.0-alpha.12",
     "@vuesion/vuex-persist": "4.0.0-alpha.12",
-    "animejs": "^3.2.0",
-    "compression": "^1.7.4",
+    "animejs": "3.2.0",
+    "compression": "1.7.4",
     "config": "3.3.1",
-    "cookie-parser": "^1.4.5",
-    "helmet": "^3.23.1",
-    "lodash": "^4.17.15",
-    "marked": "^1.1.0",
-    "nuxt": "^2.0.0",
-    "nuxt-i18n": "^6.12.2",
+    "cookie-parser": "1.4.5",
+    "helmet": "3.23.3",
+    "lodash": "4.17.20",
+    "marked": "1.1.1",
+    "nuxt": "2.14.5",
+    "nuxt-i18n": "6.15.1",
     "query-string": "6.13.1",
-    "vee-validate": "^3.3.7"
+    "vee-validate": "3.3.11"
   },
   "devDependencies": {
-    "@commitlint/cli": "^9.0.1",
-    "@commitlint/config-conventional": "^9.0.1",
-    "@nuxt/typescript-build": "^1.0.0",
-    "@nuxtjs/eslint-config-typescript": "^2.0.0",
-    "@nuxtjs/eslint-module": "^2.0.0",
-    "@storybook/addon-actions": "5.3.19",
-    "@storybook/vue": "5.3.19",
-    "@testing-library/jest-dom": "^5.10.0",
-    "@testing-library/vue": "^5.0.4",
-    "@types/jest": "^26.0.0",
-    "@types/lodash": "^4.14.155",
-    "@types/marked": "^1.1.0",
-    "@types/testing-library__jest-dom": "^5.9.1",
-    "@vue/test-utils": "^1.0.0-beta.27",
+    "@commitlint/cli": "9.1.2",
+    "@commitlint/config-conventional": "9.1.2",
+    "@nuxt/typescript-build": "1.0.3",
+    "@nuxtjs/eslint-config-typescript": "2.1.0",
+    "@nuxtjs/eslint-module": "2.0.0",
+    "@storybook/addon-actions": "5.3.21",
+    "@storybook/vue": "5.3.21",
+    "@testing-library/jest-dom": "5.11.4",
+    "@testing-library/vue": "5.0.4",
+    "@types/jest": "26.0.13",
+    "@types/lodash": "4.14.161",
+    "@types/marked": "1.1.0",
+    "@types/testing-library__jest-dom": "5.9.2",
+    "@vue/test-utils": "1.1.0",
     "@vuesion/service": "4.0.0-alpha.12",
     "@vuesion/storybook-theme-switcher": "4.0.0-alpha.12",
-    "axios-mock-adapter": "^1.18.1",
+    "axios-mock-adapter": "1.18.2",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.0.1",
-    "eslint": "^7.2.0",
-    "eslint-config-prettier": "^6.10.0",
+    "babel-eslint": "10.1.0",
+    "babel-jest": "26.3.0",
+    "eslint": "7.8.1",
+    "eslint-config-prettier": "6.11.0",
     "eslint-plugin-nuxt": ">=0.4.2",
-    "eslint-plugin-prettier": "^3.1.2",
-    "flush-promises": "^1.0.2",
-    "husky": "^4.0.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.0.1",
-    "lint-staged": "^10.0.0",
-    "node-sass": "^4.14.1",
-    "prettier": "^2.0.0",
-    "sass": "^1.26.8",
-    "sass-loader": "^8.0.2",
-    "ts-jest": "^26.1.0",
-    "vue-jest": "^3.0.4"
+    "eslint-plugin-prettier": "3.1.4",
+    "flush-promises": "1.0.2",
+    "husky": "4.3.0",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "26.4.2",
+    "lint-staged": "10.3.0",
+    "node-sass": "4.14.1",
+    "prettier": "2.1.1",
+    "sass": "1.26.10",
+    "sass-loader": "8.0.2",
+    "ts-jest": "26.3.0",
+    "vue-jest": "3.0.6"
   },
   "engines": {
     "node": ">= 12.0.0",
