--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
   "scripts": {
     "dev": "nuxt-ts",
     "generate": "vuesion generate",
-    "add": "vuesion add",
     "extract-i18n-messages": "vuesion extract-i18n-messages",
     "test": "vuesion test --coverage",
     "test:watch": "vuesion test --coverage --watch",
@@ -56,7 +55,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS",
-      "pre-commit": "vuesion parallel \"vuesion prettier --staged\" \"npm run lint\" \"npm run test\""
+      "pre-commit": "vuesion prettier --staged && vuesion parallel \"npm run lint\" \"npm run test\""
     }
   },
   "dependencies": {
@@ -67,8 +66,8 @@
     "@types/cookie-parser": "1.4.2",
     "@types/helmet": "0.0.48",
     "@vue/composition-api": "0.6.7",
-    "@vuesion/utils": "4.0.0-alpha.12",
-    "@vuesion/vuex-persist": "4.0.0-alpha.12",
+    "@vuesion/utils": "4.0.0-alpha.13",
+    "@vuesion/vuex-persist": "4.0.0-alpha.13",
     "animejs": "3.2.0",
     "compression": "1.7.4",
     "config": "3.3.1",
@@ -82,8 +81,8 @@
     "vee-validate": "3.3.11"
   },
   "devDependencies": {
-    "@commitlint/cli": "9.1.2",
-    "@commitlint/config-conventional": "9.1.2",
+    "@commitlint/cli": "11.0.0",
+    "@commitlint/config-conventional": "11.0.0",
     "@nuxt/typescript-build": "1.0.3",
     "@nuxtjs/eslint-config-typescript": "2.1.0",
     "@nuxtjs/eslint-module": "2.0.0",
@@ -94,13 +93,10 @@
     "@types/marked": "1.1.0",
     "@types/testing-library__jest-dom": "5.9.2",
     "@vue/test-utils": "1.1.0",
-    "@vuesion/service": "4.0.0-alpha.12",
-    "@vuesion/storybook-theme-switcher": "4.0.0-alpha.12",
+    "@vuesion/service": "4.0.0-alpha.13",
+    "@vuesion/storybook-theme-switcher": "4.0.0-alpha.13",
     "axios-mock-adapter": "1.18.2",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "10.1.0",
-    "babel-jest": "26.3.0",
-    "eslint": "7.8.1",
     "eslint-plugin-nuxt": ">=0.4.2",
     "flush-promises": "1.0.2",
     "husky": "4.3.0",
