--- a/package.json
+++ b/package.json
@@ -59,9 +59,10 @@
     }
   },
   "dependencies": {
-    "@nuxtjs/composition-api": "0.12.5",
     "@nuxt/typescript-runtime": "0.4.10",
+    "@nuxtjs/auth-next": "5.0.0-1595976864.509d9d6",
     "@nuxtjs/axios": "5.12.2",
+    "@nuxtjs/composition-api": "0.12.5",
     "@nuxtjs/pwa": "3.0.2",
     "@vuesion/utils": "4.0.0-alpha.14",
     "@vuesion/vuex-persist": "4.0.0-alpha.14",
