--- a/package.json
+++ b/package.json
@@ -59,46 +59,47 @@
     }
   },
   "dependencies": {
-    "@nuxt/typescript-runtime": "0.4.10",
-    "@nuxtjs/auth-next": "5.0.0-1595976864.509d9d6",
-    "@nuxtjs/axios": "5.12.2",
-    "@nuxtjs/composition-api": "0.12.5",
-    "@nuxtjs/pwa": "3.0.2",
+    "@nuxt/typescript-runtime": "2.0.0",
+    "@nuxtjs/auth-next": "5.0.0-1608568767.2fe2217",
+    "@nuxtjs/axios": "5.12.4",
+    "@nuxtjs/composition-api": "0.17.0",
+    "@nuxtjs/pwa": "3.3.3",
     "@vuesion/utils": "4.0.0-alpha.14",
     "@vuesion/vuex-persist": "4.0.0-alpha.14",
-    "animejs": "3.2.0",
+    "animejs": "3.2.1",
     "compression": "1.7.4",
     "cookie-parser": "1.4.5",
-    "helmet": "3.23.3",
+    "helmet": "4.3.1",
     "lodash": "4.17.20",
-    "marked": "1.1.1",
-    "nuxt": "2.14.5",
-    "nuxt-i18n": "6.15.1",
-    "vee-validate": "3.3.11"
+    "marked": "1.2.7",
+    "nuxt": "2.14.12",
+    "nuxt-i18n": "6.16.0",
+    "vee-validate": "3.4.5"
   },
   "devDependencies": {
     "@commitlint/cli": "11.0.0",
     "@commitlint/config-conventional": "11.0.0",
-    "@nuxt/typescript-build": "1.0.3",
-    "@nuxtjs/eslint-config-typescript": "2.1.0",
-    "@nuxtjs/eslint-module": "2.0.0",
-    "@testing-library/jest-dom": "5.11.4",
-    "@testing-library/vue": "5.0.4",
+    "@nuxt/types": "2.14.12",
+    "@nuxt/typescript-build": "2.0.3",
+    "@nuxtjs/eslint-config-typescript": "5.0.0",
+    "@nuxtjs/eslint-module": "3.0.2",
+    "@testing-library/jest-dom": "5.11.8",
+    "@testing-library/vue": "5.6.1",
     "@types/animejs": "3.1.2",
     "@types/cookie-parser": "1.4.2",
-    "@types/helmet": "0.0.48",
-    "@types/jest": "26.0.13",
-    "@types/lodash": "4.14.161",
-    "@types/marked": "1.1.0",
-    "@types/testing-library__jest-dom": "5.9.2",
-    "@vue/test-utils": "1.1.0",
+    "@types/helmet": "4.0.0",
+    "@types/jest": "26.0.19",
+    "@types/lodash": "4.14.167",
+    "@types/marked": "1.2.1",
+    "@types/testing-library__jest-dom": "5.9.5",
+    "@vue/test-utils": "1.1.2",
     "@vuesion/service": "4.0.0-alpha.14",
     "@vuesion/storybook-theme-switcher": "4.0.0-alpha.14",
-    "axios-mock-adapter": "1.18.2",
+    "axios-mock-adapter": "1.19.0",
     "babel-core": "7.0.0-bridge.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
+    "eslint-plugin-nuxt": ">=2.0.0",
     "flush-promises": "1.0.2",
-    "husky": "4.3.0",
+    "husky": "4.3.6",
     "identity-obj-proxy": "3.0.0",
     "node-sass": "4.14.1"
   },
@@ -111,6 +112,9 @@
       "window": true,
       "ts-jest": {
         "tsConfig": "tsconfig.test.json"
+      },
+      "vue-jest": {
+        "experimentalCSSCompile": false
       }
     },
     "rootDir": ".",
@@ -123,7 +127,7 @@
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/src/$1",
       "^vue$": "vue/dist/vue.common.js",
-      "@nuxtjs/composition-api": "@nuxtjs/composition-api/lib/cjs/entrypoint.js"
+      "@nuxtjs/composition-api": "@nuxtjs/composition-api/lib/entrypoint.js"
     },
     "moduleFileExtensions": [
       "ts",
@@ -131,18 +135,28 @@
     ],
     "transform": {
       ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest",
-      ".(ts|tsx)": "ts-jest"
+      ".(ts|tsx)$": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
     "testPathIgnorePatterns": [
       "/cypress/"
     ],
     "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/**/*"
+    ],
     "coveragePathIgnorePatterns": [
       "/node_modules/",
       "/layouts/",
       "/plugins/",
-      "/test/"
+      "/enums/",
+      "/interfaces/",
+      "/test/",
+      "/static/",
+      "/api/",
+      "src/store/index.ts",
+      ".stories.",
+      ".d.ts"
     ],
     "coverageThreshold": {
       "global": {
