--- a/package.json
+++ b/package.json
@@ -61,11 +61,11 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "2.0.0",
     "@nuxtjs/auth-next": "5.0.0-1608568767.2fe2217",
-    "@nuxtjs/axios": "5.12.4",
+    "@nuxtjs/axios": "5.12.5",
     "@nuxtjs/composition-api": "0.17.0",
     "@nuxtjs/pwa": "3.3.3",
-    "@vuesion/utils": "4.0.0-alpha.14",
-    "@vuesion/vuex-persist": "4.0.0-alpha.14",
+    "@vuesion/utils": "4.0.0-alpha.16",
+    "@vuesion/vuex-persist": "4.0.0-alpha.16",
     "animejs": "3.2.1",
     "compression": "1.7.4",
     "cookie-parser": "1.4.5",
@@ -73,7 +73,7 @@
     "lodash": "4.17.20",
     "marked": "1.2.7",
     "nuxt": "2.14.12",
-    "nuxt-i18n": "6.16.0",
+    "nuxt-i18n": "6.17.0",
     "vee-validate": "3.4.5"
   },
   "devDependencies": {
@@ -87,21 +87,20 @@
     "@testing-library/vue": "5.6.1",
     "@types/animejs": "3.1.2",
     "@types/cookie-parser": "1.4.2",
-    "@types/helmet": "4.0.0",
     "@types/jest": "26.0.19",
     "@types/lodash": "4.14.167",
     "@types/marked": "1.2.1",
     "@types/testing-library__jest-dom": "5.9.5",
     "@vue/test-utils": "1.1.2",
-    "@vuesion/service": "4.0.0-alpha.14",
-    "@vuesion/storybook-theme-switcher": "4.0.0-alpha.14",
+    "@vuesion/service": "4.0.0-alpha.16",
+    "@vuesion/storybook-theme-switcher": "4.0.0-alpha.16",
     "axios-mock-adapter": "1.19.0",
     "babel-core": "7.0.0-bridge.0",
     "eslint-plugin-nuxt": ">=2.0.0",
     "flush-promises": "1.0.2",
     "husky": "4.3.6",
     "identity-obj-proxy": "3.0.0",
-    "node-sass": "4.14.1"
+    "node-sass": "5.0.0"
   },
   "engines": {
     "node": ">= 12.0.0",
@@ -111,7 +110,7 @@
     "globals": {
       "window": true,
       "ts-jest": {
-        "tsConfig": "tsconfig.test.json"
+        "tsconfig": "tsconfig.test.json"
       },
       "vue-jest": {
         "experimentalCSSCompile": false
