--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@nuxt/typescript-build": "2.0.6",
     "@nuxtjs/eslint-config-typescript": "5.0.0",
     "@nuxtjs/eslint-module": "3.0.2",
+    "@nuxtjs/html-validator": "0.4.0",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/vue": "5.6.1",
     "@types/animejs": "3.1.2",
