--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@nuxtjs/eslint-module": "3.0.2",
     "@nuxtjs/html-validator": "0.4.0",
     "@testing-library/jest-dom": "5.11.9",
+    "@testing-library/user-event": "13.1.9",
     "@testing-library/vue": "5.6.1",
     "@types/animejs": "3.1.2",
     "@types/compression": "1.7.0",
