--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,9 +32,9 @@ jobs:
       - run:
           name: Code Climate before build
           command: ./cc-test-reporter before-build
-      - run:
-          name: Checkout premium components
-          command: git clone https://github.com/vuesion/vuesion-premium.git ./src/components/vuesion-premium
+#      - run:
+#          name: Checkout premium components
+#          command: git clone https://github.com/vuesion/vuesion-premium.git ./src/components/vuesion-premium
       - run:
           name: Building application
           command: npm run ci
