--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,8 +33,8 @@ jobs:
           name: Code Climate before build
           command: ./cc-test-reporter before-build
       - run:
-          name: Checkout Vuesion+ components
-          command: git clone https://github.com/vuesion/vuesion-plus-components.git ./src/components/vuesion-plus-components
+          name: Checkout Vuesion+ Datatable
+          command: git clone https://github.com/vuesion/vuesion-plus-datatable.git ./src/components/a-datatable
       - run:
           name: Building application
           command: npm run ci
